# brahms-syntax-highlighting

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  vsc-extension-quickstart.md
bindings/c/: tree-sitter-brahms-parser.pc.in
bindings/c/tree_sitter/: tree-sitter-brahms-parser.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_brahms_parser/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBrahmsParserTests/: TreeSitterBrahmsParserTests.swift
client/: extension.js  extension.ts
images/: brahms-icons-theme.json
server/: server.js  server.ts
src/: grammar.json
syntaxes/: brahms.tmLanguage.json
