[package]
name = "tree-sitter-brahms-parser"
description = "language server and features for the brahms programming language"
version = "0.1.0"
authors = ["Ewan Pedersen <pedersenewan@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "brahms-parser"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/gassandrid/brahms-syntax-highlighting"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.5"
